# PhotoVault

./: .gitignore  implement.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
photovault/: .gitignore  index.html  (+3 more)
photovault/src-tauri/sync-logic/: Cargo.toml  test.db
photovault/src-tauri/sync-logic/.sqlx/: query-06e7b1bd7a21c577474c414b909d2a9a0d84e0477c5287d3f2fc94bd9e9b7c3d.json
photovault/src-tauri/sync-logic/src/: lib.rs
src-tauri/: Cargo.toml  prepare_db.rs  tauri.conf.json  test.db  test_add_photos_to_album.db  test_add_photos_to_album.db-shm  test_add_photos_to_album.db-wal  test_create_album.db  test_delete_album.db  test_delete_album.db-shm  test_delete_album.db-wal
src-tauri/migrations/: 20251014233600_create_photos_table.sql  20251014233700_create_albums_table.sql  20251014233800_create_tags_table.sql  20251014233900_create_photo_tags_table.sql  20251014234000_create_photo_albums_table.sql  20251014234100_create_sync_operations_table.sql  20251016200800_add_indexes_to_photos_table.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: album.rs  duplicates.rs  filter.rs  mod.rs  tag.rs
src-tauri/src/db/: manager.rs  mod.rs
src-tauri/src/models/: album.rs  filter.rs  mod.rs  operation.rs  photo.rs  tag.rs
src-tauri/src/services/: album.rs  config.rs  duplicate.rs  filter.rs  mod.rs  sync_engine.rs  sync_status.rs  tag.rs
src-tauri/test_home_16b3f163-80b0-4eb1-88b5-40385faeab33/.photovault/: config.json
src-tauri/tests/: album_service_test.rs  commands_test.rs  common.rs  migration_test.rs
(+59 files in other folders)
