[package]
name = "sync-logic"
version = "0.1.0"
edition = "2021"

[lib]
name = "sync_logic"
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0"
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3.3"